실시간 검색 기능 추가

--- a/TravelTalk/ChatList/ChatList.storyboard
+++ b/TravelTalk/ChatList/ChatList.storyboard
@@ -17,18 +17,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C5g-Ia-f4i">
+                                <rect key="frame" x="0.0" y="59" width="393" height="1"/>
+                                <color key="backgroundColor" systemColor="systemGray5Color"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="Iab-0u-se9"/>
+                                </constraints>
+                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="zlU-7q-6dQ">
-                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <rect key="frame" x="0.0" y="60" width="393" height="758"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="zlU-7q-6dQ" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="Iyb-aR-c0a"/>
+                            <constraint firstItem="zlU-7q-6dQ" firstAttribute="top" secondItem="C5g-Ia-f4i" secondAttribute="bottom" id="HjR-NB-uRr"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="zlU-7q-6dQ" secondAttribute="bottom" id="MqN-Fd-4vc"/>
                             <constraint firstItem="zlU-7q-6dQ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="PYe-qa-RUf"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="zlU-7q-6dQ" secondAttribute="trailing" id="SNf-FG-M0g"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="C5g-Ia-f4i" secondAttribute="trailing" id="Xj8-r0-epf"/>
+                            <constraint firstItem="C5g-Ia-f4i" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="iye-gO-FR0"/>
+                            <constraint firstItem="C5g-Ia-f4i" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="m8P-dC-LYX"/>
                         </constraints>
                     </view>
                     <connections>
@@ -43,6 +53,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray5Color">
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
