--- a/TravelTalk/ChatRoom/Cell/UserTableViewCell.xib
+++ b/TravelTalk/ChatRoom/Cell/UserTableViewCell.xib
@@ -5,46 +5,66 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="118" id="KGk-i7-Jjw" customClass="UserTableViewCell" customModule="TravelTalk" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="353" height="118"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="146" id="KGk-i7-Jjw" customClass="UserTableViewCell" customModule="TravelTalk" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="353" height="146"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="353" height="118"/>
+                <rect key="frame" x="0.0" y="0.0" width="353" height="146"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pOW-ql-MCn">
-                        <rect key="frame" x="16" y="68.333333333333329" width="52" height="21"/>
+                        <rect key="frame" x="16.666666666666668" y="113" width="41.333333333333329" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="dmfalmfaklmfamfkmakfmmㅏ으ㅡㄹ미ㅡㅏㅡㄹ미ㅏㅡㅏㅡ아리ㅡ아ㅣ르ㅏ으라으라ㅣ으ㅏ르아ㅡ리으라미ㅡㄹㅁ" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sik-gN-g6d">
-                        <rect key="frame" x="72" y="8" width="265" height="81.333333333333329"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mNy-RE-ePi">
+                        <rect key="frame" x="62" y="12" width="275" height="122"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sik-gN-g6d">
+                                <rect key="frame" x="8" y="8" width="259" height="106"/>
+                                <string key="text">dfdakdfamfklamfklmafmakdmfakmfkmakdfmaklmfkamfklamklfmmfkmfklamkfamdfldfkadfmkadlfmaklfmlfmklmflkamfkmakldfmaklmfklamflkamkfmakldmfaklmfklamfamdfklamdfkmalkdfmakldmflakd</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="Sik-gN-g6d" secondAttribute="bottom" constant="8" id="4ZO-pX-ABu"/>
+                            <constraint firstItem="Sik-gN-g6d" firstAttribute="leading" secondItem="mNy-RE-ePi" secondAttribute="leading" constant="8" id="Bcg-sa-cru"/>
+                            <constraint firstAttribute="trailing" secondItem="Sik-gN-g6d" secondAttribute="trailing" constant="8" id="D8a-7m-VBq"/>
+                            <constraint firstItem="Sik-gN-g6d" firstAttribute="top" secondItem="mNy-RE-ePi" secondAttribute="top" constant="8" id="DcF-h5-Vi8"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="pOW-ql-MCn" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="8il-Fj-m5Y"/>
-                    <constraint firstItem="pOW-ql-MCn" firstAttribute="bottom" secondItem="Sik-gN-g6d" secondAttribute="bottom" id="937-re-DJg"/>
-                    <constraint firstItem="Sik-gN-g6d" firstAttribute="leading" secondItem="pOW-ql-MCn" secondAttribute="trailing" constant="4" id="9aR-eQ-HAZ"/>
-                    <constraint firstAttribute="trailing" secondItem="Sik-gN-g6d" secondAttribute="trailing" constant="16" id="R8V-fL-DeW"/>
-                    <constraint firstItem="Sik-gN-g6d" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="WKN-fY-M4B"/>
-                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Sik-gN-g6d" secondAttribute="bottom" constant="8" id="dfY-85-d7x"/>
+                    <constraint firstItem="mNy-RE-ePi" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="MDk-GR-fn9"/>
+                    <constraint firstItem="mNy-RE-ePi" firstAttribute="leading" secondItem="pOW-ql-MCn" secondAttribute="trailing" constant="4" id="QTb-wt-ioq"/>
+                    <constraint firstItem="pOW-ql-MCn" firstAttribute="bottom" secondItem="mNy-RE-ePi" secondAttribute="bottom" id="elt-H7-Ccd"/>
+                    <constraint firstAttribute="trailing" secondItem="mNy-RE-ePi" secondAttribute="trailing" constant="16" id="fNL-kK-X8G"/>
+                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="mNy-RE-ePi" secondAttribute="bottom" constant="12" id="rMG-av-yCb"/>
+                    <constraint firstItem="pOW-ql-MCn" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="trn-Hk-QaZ"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="dateLabel" destination="pOW-ql-MCn" id="Yqm-IT-uAV"/>
                 <outlet property="messageLabel" destination="Sik-gN-g6d" id="W6F-Wi-Vgb"/>
+                <outlet property="messageView" destination="mNy-RE-ePi" id="T99-pp-9SU"/>
             </connections>
-            <point key="canvasLocation" x="125.95419847328243" y="19.718309859154932"/>
+            <point key="canvasLocation" x="125.95419847328243" y="29.577464788732396"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
