채팅방 구현

--- a/TravelTalk/ChatList/Cell/ChatListTableViewCell.xib
+++ b/TravelTalk/ChatList/Cell/ChatListTableViewCell.xib
@@ -10,15 +10,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="110" id="KGk-i7-Jjw" customClass="ChatListTableViewCell" customModule="TravelTalk" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="408" height="110"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="85" id="KGk-i7-Jjw" customClass="ChatListTableViewCell" customModule="TravelTalk" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="408" height="85"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="408" height="110"/>
+                <rect key="frame" x="0.0" y="0.0" width="408" height="85"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1J1-im-QMB">
-                        <rect key="frame" x="94" y="29" width="41.333333333333343" height="20"/>
+                        <rect key="frame" x="84" y="16" width="41.333333333333343" height="20"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="JOi-45-hrl"/>
                         </constraints>
@@ -27,7 +27,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XEx-5R-Sb5">
-                        <rect key="frame" x="94" y="53" width="298" height="22"/>
+                        <rect key="frame" x="84" y="40" width="308" height="22"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="22" id="Vlt-th-ZQz"/>
                         </constraints>
@@ -36,16 +36,16 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pgy-62-6sg">
-                        <rect key="frame" x="350" y="28.666666666666671" width="42" height="21"/>
+                        <rect key="frame" x="350" y="15.666666666666664" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QvQ-r7-y5M">
-                        <rect key="frame" x="16" y="20" width="70" height="70"/>
+                        <rect key="frame" x="16" y="12" width="60" height="60"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="QvQ-r7-y5M" secondAttribute="height" multiplier="1:1" id="2yJ-1a-bAi"/>
-                            <constraint firstAttribute="height" constant="70" id="yLZ-9w-shB"/>
+                            <constraint firstAttribute="height" constant="60" id="6tz-Zo-Ffn"/>
                         </constraints>
                     </imageView>
                 </subviews>
@@ -53,9 +53,11 @@
                     <constraint firstItem="1J1-im-QMB" firstAttribute="leading" secondItem="QvQ-r7-y5M" secondAttribute="trailing" constant="8" id="14O-6T-BMg"/>
                     <constraint firstItem="1J1-im-QMB" firstAttribute="centerY" secondItem="QvQ-r7-y5M" secondAttribute="centerY" constant="-16" id="92C-BS-kw0"/>
                     <constraint firstItem="XEx-5R-Sb5" firstAttribute="top" secondItem="1J1-im-QMB" secondAttribute="bottom" constant="4" id="LxZ-aU-Elj"/>
+                    <constraint firstAttribute="bottom" secondItem="QvQ-r7-y5M" secondAttribute="bottom" constant="12" id="QDm-IG-rJ1"/>
                     <constraint firstItem="XEx-5R-Sb5" firstAttribute="leading" secondItem="1J1-im-QMB" secondAttribute="leading" id="Rko-1B-1Dy"/>
                     <constraint firstItem="QvQ-r7-y5M" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="U0g-6D-33L"/>
                     <constraint firstAttribute="trailing" secondItem="XEx-5R-Sb5" secondAttribute="trailing" constant="16" id="WOD-lr-uVP"/>
+                    <constraint firstItem="QvQ-r7-y5M" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="X7H-Q7-oE5"/>
                     <constraint firstItem="Pgy-62-6sg" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="1J1-im-QMB" secondAttribute="trailing" constant="8" id="aQz-aT-T2G"/>
                     <constraint firstItem="QvQ-r7-y5M" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="dip-d3-aOl"/>
                     <constraint firstItem="Pgy-62-6sg" firstAttribute="centerY" secondItem="1J1-im-QMB" secondAttribute="centerY" id="qIb-mQ-Y3X"/>
@@ -69,7 +71,7 @@
                 <outlet property="dateLabel" destination="Pgy-62-6sg" id="lCg-5Y-UNP"/>
                 <outlet property="userImageView" destination="QvQ-r7-y5M" id="1ch-mJ-Nii"/>
             </connections>
-            <point key="canvasLocation" x="109.9236641221374" y="42.95774647887324"/>
+            <point key="canvasLocation" x="109.9236641221374" y="34.154929577464792"/>
         </tableViewCell>
     </objects>
 </document>
