--- a/TravelTalk/ChatRoom/Cell/UserTableViewCell.xib
+++ b/TravelTalk/ChatRoom/Cell/UserTableViewCell.xib
@@ -11,24 +11,24 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="146" id="KGk-i7-Jjw" customClass="UserTableViewCell" customModule="TravelTalk" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="353" height="146"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="119" id="KGk-i7-Jjw" customClass="UserTableViewCell" customModule="TravelTalk" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="651" height="119"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="353" height="146"/>
+                <rect key="frame" x="0.0" y="0.0" width="651" height="119"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pOW-ql-MCn">
-                        <rect key="frame" x="16.666666666666668" y="113" width="41.333333333333329" height="21"/>
+                        <rect key="frame" x="102" y="86" width="41.333333333333343" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mNy-RE-ePi">
-                        <rect key="frame" x="62" y="12" width="275" height="122"/>
+                        <rect key="frame" x="147.33333333333334" y="12" width="487.66666666666663" height="95"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sik-gN-g6d">
-                                <rect key="frame" x="8" y="8" width="259" height="106"/>
+                                <rect key="frame" x="8" y="8" width="471.66666666666669" height="79"/>
                                 <string key="text">dfdakdfamfklamfklmafmakdmfakmfkmakdfmaklmfkamfklamklfmmfkmfklamkfamdfldfkadfmkadlfmaklfmlfmklmflkamfkmakldfmaklmfklamflkamkfmakldmfaklmfklamfamdfklamdfkmalkdfmakldmflakd</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -49,8 +49,8 @@
                     <constraint firstItem="mNy-RE-ePi" firstAttribute="leading" secondItem="pOW-ql-MCn" secondAttribute="trailing" constant="4" id="QTb-wt-ioq"/>
                     <constraint firstItem="pOW-ql-MCn" firstAttribute="bottom" secondItem="mNy-RE-ePi" secondAttribute="bottom" id="elt-H7-Ccd"/>
                     <constraint firstAttribute="trailing" secondItem="mNy-RE-ePi" secondAttribute="trailing" constant="16" id="fNL-kK-X8G"/>
-                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="mNy-RE-ePi" secondAttribute="bottom" constant="12" id="rMG-av-yCb"/>
-                    <constraint firstItem="pOW-ql-MCn" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="trn-Hk-QaZ"/>
+                    <constraint firstItem="pOW-ql-MCn" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="100" id="iFk-gV-64B"/>
+                    <constraint firstAttribute="bottom" secondItem="mNy-RE-ePi" secondAttribute="bottom" constant="12" id="rMG-av-yCb"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -59,7 +59,7 @@
                 <outlet property="messageLabel" destination="Sik-gN-g6d" id="W6F-Wi-Vgb"/>
                 <outlet property="messageView" destination="mNy-RE-ePi" id="T99-pp-9SU"/>
             </connections>
-            <point key="canvasLocation" x="125.95419847328243" y="29.577464788732396"/>
+            <point key="canvasLocation" x="-90.839694656488547" y="13.028169014084508"/>
         </tableViewCell>
     </objects>
     <resources>
