4명 단체방 이미지 구성 / 채팅 마지막 날짜구하는 메서드를 ChatRoom 내 연산 프로퍼티로 변경

--- a/TravelTalk/ChatList/Cell/ChatListTableViewCell.xib
+++ b/TravelTalk/ChatList/Cell/ChatListTableViewCell.xib
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -48,19 +49,70 @@
                             <constraint firstAttribute="height" constant="60" id="6tz-Zo-Ffn"/>
                         </constraints>
                     </imageView>
+                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wET-Ix-Kft">
+                        <rect key="frame" x="16" y="12" width="60" height="60"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xth-tY-3VB">
+                                <rect key="frame" x="2" y="2" width="27" height="27"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IkU-lB-Hrb">
+                                <rect key="frame" x="2" y="31" width="27" height="27"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="IkU-lB-Hrb" secondAttribute="height" multiplier="1:1" id="RWc-5O-jmf"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BKe-3Z-Y6w">
+                                <rect key="frame" x="31" y="31" width="27" height="27"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="BKe-3Z-Y6w" secondAttribute="height" multiplier="1:1" id="wKV-Sr-E9z"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ClR-Y8-4TN">
+                                <rect key="frame" x="31" y="2" width="27" height="27"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="ClR-Y8-4TN" secondAttribute="height" multiplier="1:1" id="2yq-FT-Nlu"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="IkU-lB-Hrb" firstAttribute="leading" secondItem="wET-Ix-Kft" secondAttribute="leading" constant="2" id="20Z-AA-tvG"/>
+                            <constraint firstItem="ClR-Y8-4TN" firstAttribute="width" secondItem="xth-tY-3VB" secondAttribute="width" id="4dw-Za-BHB"/>
+                            <constraint firstItem="IkU-lB-Hrb" firstAttribute="top" secondItem="xth-tY-3VB" secondAttribute="bottom" constant="2" id="9gE-dP-9QJ"/>
+                            <constraint firstAttribute="bottom" secondItem="BKe-3Z-Y6w" secondAttribute="bottom" constant="2" id="ABf-J9-Zoo"/>
+                            <constraint firstItem="BKe-3Z-Y6w" firstAttribute="top" secondItem="ClR-Y8-4TN" secondAttribute="bottom" constant="2" id="Cc4-7A-lbS"/>
+                            <constraint firstItem="BKe-3Z-Y6w" firstAttribute="width" secondItem="xth-tY-3VB" secondAttribute="width" id="FKA-2Y-qI6"/>
+                            <constraint firstItem="xth-tY-3VB" firstAttribute="leading" secondItem="wET-Ix-Kft" secondAttribute="leading" constant="2" id="Jjc-4z-4ww"/>
+                            <constraint firstItem="xth-tY-3VB" firstAttribute="top" secondItem="wET-Ix-Kft" secondAttribute="top" constant="2" id="Qtp-GV-ek0"/>
+                            <constraint firstAttribute="trailing" secondItem="ClR-Y8-4TN" secondAttribute="trailing" constant="2" id="Qzy-2X-4p0"/>
+                            <constraint firstItem="BKe-3Z-Y6w" firstAttribute="leading" secondItem="IkU-lB-Hrb" secondAttribute="trailing" constant="2" id="RY3-9W-1LU"/>
+                            <constraint firstItem="BKe-3Z-Y6w" firstAttribute="width" secondItem="BKe-3Z-Y6w" secondAttribute="height" multiplier="1:1" id="dUK-67-etA"/>
+                            <constraint firstItem="ClR-Y8-4TN" firstAttribute="top" secondItem="wET-Ix-Kft" secondAttribute="top" constant="2" id="hPa-yg-96Q"/>
+                            <constraint firstItem="ClR-Y8-4TN" firstAttribute="leading" secondItem="xth-tY-3VB" secondAttribute="trailing" constant="2" id="jE0-sJ-UCl"/>
+                            <constraint firstAttribute="bottom" secondItem="IkU-lB-Hrb" secondAttribute="bottom" constant="2" id="jQr-kE-que"/>
+                            <constraint firstAttribute="trailing" secondItem="BKe-3Z-Y6w" secondAttribute="trailing" constant="2" id="knk-Ia-hFy"/>
+                            <constraint firstItem="ClR-Y8-4TN" firstAttribute="width" secondItem="ClR-Y8-4TN" secondAttribute="height" multiplier="1:1" id="l1v-HF-2Q3"/>
+                            <constraint firstItem="IkU-lB-Hrb" firstAttribute="width" secondItem="IkU-lB-Hrb" secondAttribute="height" multiplier="1:1" id="lop-1d-zj8"/>
+                            <constraint firstItem="IkU-lB-Hrb" firstAttribute="width" secondItem="xth-tY-3VB" secondAttribute="width" id="tZS-i1-Ial"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
                     <constraint firstItem="1J1-im-QMB" firstAttribute="leading" secondItem="QvQ-r7-y5M" secondAttribute="trailing" constant="8" id="14O-6T-BMg"/>
                     <constraint firstItem="1J1-im-QMB" firstAttribute="centerY" secondItem="QvQ-r7-y5M" secondAttribute="centerY" constant="-16" id="92C-BS-kw0"/>
                     <constraint firstItem="XEx-5R-Sb5" firstAttribute="top" secondItem="1J1-im-QMB" secondAttribute="bottom" constant="4" id="LxZ-aU-Elj"/>
+                    <constraint firstItem="wET-Ix-Kft" firstAttribute="trailing" secondItem="QvQ-r7-y5M" secondAttribute="trailing" id="N8T-F0-jFx"/>
                     <constraint firstAttribute="bottom" secondItem="QvQ-r7-y5M" secondAttribute="bottom" constant="12" id="QDm-IG-rJ1"/>
                     <constraint firstItem="XEx-5R-Sb5" firstAttribute="leading" secondItem="1J1-im-QMB" secondAttribute="leading" id="Rko-1B-1Dy"/>
                     <constraint firstItem="QvQ-r7-y5M" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="U0g-6D-33L"/>
+                    <constraint firstItem="wET-Ix-Kft" firstAttribute="top" secondItem="QvQ-r7-y5M" secondAttribute="top" id="VKp-ML-Zin"/>
                     <constraint firstAttribute="trailing" secondItem="XEx-5R-Sb5" secondAttribute="trailing" constant="16" id="WOD-lr-uVP"/>
                     <constraint firstItem="QvQ-r7-y5M" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="X7H-Q7-oE5"/>
                     <constraint firstItem="Pgy-62-6sg" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="1J1-im-QMB" secondAttribute="trailing" constant="8" id="aQz-aT-T2G"/>
                     <constraint firstItem="QvQ-r7-y5M" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="dip-d3-aOl"/>
+                    <constraint firstItem="wET-Ix-Kft" firstAttribute="leading" secondItem="QvQ-r7-y5M" secondAttribute="leading" id="frO-gN-N47"/>
                     <constraint firstItem="Pgy-62-6sg" firstAttribute="centerY" secondItem="1J1-im-QMB" secondAttribute="centerY" id="qIb-mQ-Y3X"/>
+                    <constraint firstItem="wET-Ix-Kft" firstAttribute="bottom" secondItem="QvQ-r7-y5M" secondAttribute="bottom" id="tIY-OJ-ohM"/>
                     <constraint firstAttribute="trailing" secondItem="Pgy-62-6sg" secondAttribute="trailing" constant="16" id="vNq-kI-1t9"/>
                 </constraints>
             </tableViewCellContentView>
@@ -70,8 +122,18 @@
                 <outlet property="chatRoomLabel" destination="1J1-im-QMB" id="DwL-Xf-JFj"/>
                 <outlet property="dateLabel" destination="Pgy-62-6sg" id="lCg-5Y-UNP"/>
                 <outlet property="userImageView" destination="QvQ-r7-y5M" id="1ch-mJ-Nii"/>
+                <outlet property="userImageViewForFour" destination="wET-Ix-Kft" id="f3M-JG-hcr"/>
+                <outletCollection property="fourUserImagesCollections" destination="xth-tY-3VB" collectionClass="NSMutableArray" id="Oow-3U-xUi"/>
+                <outletCollection property="fourUserImagesCollections" destination="ClR-Y8-4TN" collectionClass="NSMutableArray" id="KM1-6q-zbG"/>
+                <outletCollection property="fourUserImagesCollections" destination="IkU-lB-Hrb" collectionClass="NSMutableArray" id="0SG-C5-gl3"/>
+                <outletCollection property="fourUserImagesCollections" destination="BKe-3Z-Y6w" collectionClass="NSMutableArray" id="kqQ-v4-TIp"/>
             </connections>
             <point key="canvasLocation" x="109.9236641221374" y="34.154929577464792"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
